# allplayer

./: .gitignore  README.md  pack.py
Prj-Android/: build.gradle  settings.gradle
Prj-Android/allplayer/: build.gradle
Prj-Android/allplayer/src/main/: AndroidManifest.xml
Prj-Android/allplayer/src/main/cpp/: AllPLayerJNI.cpp  CMakeLists.txt
Prj-Android/allplayer/src/main/cpp/player/: allplayer.h  allplayer_manager.cpp
Prj-Android/allplayer/src/main/cpp/playercall/: JavaListener.cpp
Prj-Android/allplayer/src/main/cpp/playercall/include/: JavaListenerContainer.h  OnNativePlayerBackData.h  OnNativePlayerState.h  OnSeekComplete.h
Prj-Android/player/: build.gradle
Prj-Android/player/src/main/: AndroidManifest.xml
Prj-Win/PC_DEMO/: AScJSON.cpp  AScJSON.h  CommonDefine.h  DeviceTreeInfo.cpp  DeviceTreeInfo.h  MFC_DIALOG_2.APS  MFC_DIALOG_2.cpp  MFC_DIALOG_2.h  MFC_DIALOG_2.rc  MFC_DIALOG_2.vcxproj  MFC_DIALOG_2.vcxproj.filters  MFC_DIALOG_2Dlg.cpp  MFC_DIALOG_2Dlg.h  MyTestDialog.cpp  MyTestDialog.h  ReadMe.txt  RecordNodeInfo.h  SplitScreenWindow.cpp  SplitScreenWindow.h  VideoPlayer.cpp  VideoPlayer.h  resource.h  stdafx.cpp  stdafx.h  timer.cpp  timer.h
Prj-Win/PC_DEMO/res/: MFC_DIALOG_2.rc2
Prj-Win/libs/x64/ffmpeg/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  (+2 more)
Prj-iOS/allplayer/: allplayer.h
Prj-iOS/allplayer.xcodeproj/: project.pbxproj
Prj-iOSDemo/allplayer/GLKView/: display_frame.m
Prj-iOSDemo/allplayer/allplayer/: AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.mm
Prj-iOSDemo/allplayer/allplayer.xcodeproj/: project.pbxproj
Prj-iOSDemo/allplayer_code/: Podfile
Prj-iOSDemo/allplayer_code/allplayer/: AppDelegate.h  SceneDelegate.m  ViewController.mm  main.m
Prj-iOSDemo/allplayer_code/allplayer.xcodeproj/: project.pbxproj
Prj-iOSDemo/allplayer_code/allplayer.xcworkspace/: contents.xcworkspacedata
Prj-iOSDemo/allplayer_code/allplayerTests/: allplayerTests.m
Prj-iOSDemo/allplayer_sdk/: Podfile
Prj-iOSDemo/allplayer_sdk/AllPlayerSDK/: AllPlayerSDK.h  AllPlayerSDK.mm
Prj-iOSDemo/allplayer_sdk/allplayer/: ViewController.h  ViewController.mm  main.m
Prj-iOSDemo/allplayer_sdk/allplayer.xcodeproj/: project.pbxproj
Prj-iOSDemo/allplayer_sdk/allplayerUITests/: allplayerUITests.m
Prj-iOSDemo/playerSDK/: Podfile
Prj-iOSDemo/playerSDK/AllcamPlayerSDK/: AllCamPlayer.h  AllCamPlayer.mm
Prj-iOSDemo/playerSDK/AmsPlayerSDK/: AmsPlayerSDK.h  AmsPlayerSDK.m
Prj-iOSDemo/playerSDK/PlayerDemo/: AppDelegate.h  AppDelegate.m  Info.plist  PrefixHeader.pch  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
Prj-iOSDemo/playerSDK/PlayerLib/: PlayerLib.h  PlayerLib.mm
Prj-iOSDemo/playerSDK/allplayerSDK/: allplayerSDK.h  allplayerSDK.m
Prj-iOSDemo/playerSDK/api/: allplayer.cpp  allplayer_manager.cpp  allplayer_manager.h
Prj-iOSDemo/playerSDK/playerSDK/: AllCamAVS_Manager.h  AllCamAVS_Manager.m  AppDelegate.h  AppDelegate.m  Info.plist  OpenGLView20.h  OpenGLView20.m  SceneDelegate.h  SceneDelegate.m  main.m
Prj-iOSDemo/playerSDK/playerSDK.xcodeproj/: project.pbxproj
Prj-iOSDemo/playerSDK/playerSDK.xcworkspace/: contents.xcworkspacedata
Prj-iOSDemo/playerSDK/playerSDKTests/: playerSDKTests.m
Prj-iOSDemo/playerSDK/playerSDKUITests/: Info.plist  playerSDKUITests.m
api/: allplayer_manager.cpp
doc/: AllPlayer.drawio
player_common/audio_play/: audio_error.h  avs_audio_play.cpp  avs_audio_play.h  openAL_player.h  openAL_player.m  openSL_audio_play.cpp  openSL_audio_play.h  sdl_audio_play.cpp  sdl_audio_play.h
player_common/codec/inc/: avs_audio_thread.h  avs_decdoe_thread.h  avs_decoder.h  avs_demuxer.h  avs_mux_thread.h  avs_muxer.h  avs_parser.h  avs_resample.h  avs_stream_internal.h  avs_video_thread.h  ios_audio_thread.h  ios_video_thread.h
player_common/codec/src/: avs_audio_thread.cpp  avs_decdoe_thread.cpp  avs_decoder.cpp  avs_demuxer.cpp  avs_mux_thread.cpp  avs_muxer.cpp  avs_parser.cpp  avs_resample.cpp  avs_stream_internal.cpp  avs_video_thread.cpp  ios_audio_thread.mm
player_common/core/inc/: avs_egress.h  avs_ingress.h  avs_ios_refresh_loop.h  avs_loop_thread.h  avs_player.h  avs_player_common.h  avs_player_factory.h  avs_refresh_loop.h  avs_rtsp_ingress.h  avs_rtsp_player.h  avs_rtsp_processor.h  avs_splice_player.h  avs_universal_player.h  avs_video_state.h  rtsp_ios.hpp
player_common/core/src/: avs_ingress.cpp  avs_ios_refresh_loop.mm  avs_loop_thread.cpp  avs_player.cpp  avs_player_factory.cpp  avs_refresh_loop.cpp  avs_rtsp_ingress.cpp  avs_rtsp_player.cpp  avs_rtsp_processor.cpp  avs_splice_player.cpp  avs_universal_player.cpp  rtsp_ios.mm
player_common/crypto/: crypto_muxer.cpp  crypto_muxer.h  crypto_player.cpp  crypto_player.h  crypto_reader.cpp  crypto_reader.h  crypto_util.h  crypto_writer.cpp  crypto_writer.h
player_common/filter/inc/: avs_audio_filter.h  avs_filter.h  avs_video_filter.h  avs_watermark.h  picture_param.h
player_common/filter/src/: avs_audio_filter.cpp  avs_filter.cpp  avs_video_filter.cpp  avs_watermark.cpp
player_common/step/: step_deque.cpp  step_deque.h
player_common/utils/: List.h  aes256_cbc.h  avs_errno.h  avs_exception.h  avs_pkt_frame_q.cpp  avs_pkt_frame_q.h  avs_thread_base.h  base64.cpp  base64.h  dx_trace.cpp  dx_trace.h  filerw.cpp  filerw.h  md5.cpp  md5.h  once_token.h  socks_config.h  util.cpp  util.h
player_common/video_view/: ac_EGL.cpp  ac_EGL.h  ac_EGL.mm  ac_shader.cpp  ac_shader.h  ac_texture.cpp  ac_texture.h  ac_texture.mm  app_log.h  avs_video_view.cpp  avs_video_view.h  d3d11_video_view.cpp  d3d11_video_view.h  ios_openGL_view.h  ios_openGL_view.mm  openGL20.h  openGL20.mm  openGL_video_view.cpp  openGL_video_view.h  sdl_video_view.cpp  sdl_video_view.h  video_quad.cpp  video_quad.h  view_factory.cpp  view_factory.h
player_common/video_view/shader/: PixelShader.hlsl  PixelShader2.hlsl  VertexShader.hlsl
player_common/voice_client/: avs_rtmp_voice_client.cpp  avs_rtmp_voice_client.h  avs_rtsp_voice_client.cpp  avs_rtsp_voice_client.h  avs_voice_client.cpp  avs_voice_client.h
(+342 files in other folders)
